2010-05-02  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.3 to 1.1.4

2010-05-02  Benjamin Mack  <benni@typo3.org>

	* Updated NEWS.txt to reflect the breaking changes of Extbase
	* Fixed bug #14276: tceforms: Title of a record does not use API call to limit the character
	* Added feature #13379: Introduced a Sprite Icon API to render icons from sprites (Thanks to Thomas Allmer and Steffen Ritter)

2010-05-02  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #14277: Improve t3lib_compressor (thanks to Steffen Gebert)
	* Fixed bug #14277: Improve t3lib_compressor (thanks to Steffen Gebert)
	* Fixed bug #14279: Some non-XHTML tags in Backend (thanks to Steffen Gebert)

2010-05-02  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 1.2.0beta1.

2010-05-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #2186: Error installing static_info_tables

2010-05-01  Benjamin Mack  <benni@typo3.org>

	* Followup to #14064: Removed unused functions to detect GDlib/TTF() in the installer
	* Fixed bug #14243: some notices, undefined index in tslib_fe.php (Thanks to Martin Mueller)
	* Followup to #14064: Textual change to the new install tool
	* Followup to #7501: Removed check for static templates from installer

2010-05-01 Francois Suter  <francois@typo3.org>

	* Follow-up to #14195: removed file typo3/sysext/t3skin/stylesheets/.htaccess which has become useless

2010-05-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11150: CSS in BE has no general rules, only specific (thanks to Steffen Gebert)
	* Added feature #14247: Add a compressor/concatenator for CSS and JS (thanks to Steffen Gebert)
	* Fixed bug #14272: typo in t3lib_PageRenderer (thanks to Steffen Gebert)
	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
	* Deleted testcase for comparing ereg_ usage as it doesn't work with php >= 5.3